[tool.poetry]
name = "aries-cloudagent-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
aiohttp-apispec-plugin = ">=0.2"
aiohttp = ">=3.8.1"
apispec = ">=3.3.0"
aiohttp-apispec = ">=2.2.1"
aiohttp_cors = ">=0.7.0"
async-timeout = ">=4.0.2"
base58 = ">=2.1.0"
deepmerge = ">=0.3.0"
ecdsa = ">=0.16.1"
Markdown = ">=3.1.1"
MarkupSafe = ">=2.0.1"
marshmallow = ">=3.5.1"
msgpack = ">=1.0"
prompt-toolkit = ">=2.0.9"
PyNaCl = ">=1.4.0"
requests = ">=2.25.0"
packaging = ">=20.4"
PyLD = ">=2.0.3"
PyYAML = ">=5.4.0"
ConfigArgParse = ">=1.5.3"
PyJWT = ">=1.7.1"
pydid = ">=0.3.3"
jsonpath-ng = "1.5.2"
pytz = ">=2021.1"
python-dateutil = ">=2.8.1"
unflatten = ">=0.1"
qrcode = {version = ">=6.1", extras = ["pil"]}
python3-indy = ">=1.11.1<2"
ursa-bbs-signatures = ">=1.0.1"
aries-askar = ">=0.2.5"
indy-credx = ">=0.3"
indy-vdr = ">=0.3.3"
nest-asyncio = ">=1.5.5"

[tool.poetry.dev-dependencies]
asynctest = ">=0.13.0"
pytest = ">=7.1.2"
pytest-asyncio = ">=0.14.0"
pytest-cov = ">=2.10.1"
pytest-flake8 = ">=1.0.6"
flake8 = ">=3.9.0"
flake8-docstrings = ">=1.5.0"
flake8-rst = ">=0.7.2"
pydocstyle = ">=3.0.0"
pre-commit = ">=2.19.0"
Sphinx = ">=1.8.4"
sphinx-rtd-theme = ">=0.4.3"
ptvsd = ">=4.3.2"
pydevd = ">=1.5.1"
pydevd-pycharm = ">=193.6015.39"
#eth-utils = ">=2.0.0"
rlp = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"